--- a/foundry.toml
+++ b/foundry.toml
@@ -3,9 +3,10 @@ src = "src"
 out = "out"
 libs = ["lib"]
 ffi = true
-fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
+fs_permissions = [{ access = "read-write", path = ".forge-snapshots/" }]
 solc_version = "0.8.24"
 evm_version = "cancun"
 
-
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+[fmt]
+bracket_spacing = true
