--- a/foundry.toml
+++ b/foundry.toml
@@ -4,8 +4,10 @@ out = "out"
 libs = ["lib"]
 ffi = true
 fs_permissions = [{ access = "read-write", path = ".forge-snapshots/" }]
-solc_version = "0.8.24"
+solc_version = '0.8.25'
 evm_version = "cancun"
+optimizer_runs = 800
+via_ir = false
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
 [fmt]
