--- a/foundry.toml
+++ b/foundry.toml
@@ -2,13 +2,10 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-ffi = true
-fs_permissions = [{ access = "read-write", path = ".forge-snapshots/" }]
+
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
 solc_version = '0.8.25'
-evm_version = "cancun"
+evm_version = "cancun"  # hard fork that enabled EIP-1153
 optimizer_runs = 800
 via_ir = false
-
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
-[fmt]
-bracket_spacing = true
+ffi = true
